code/human_written_tests/WebAssembly/processed_control_flow_validation/test_nop_4.wast
(assert_invalid
  (module (func $type-f64 (result f64) (nop)))
  "type mismatch"
)